# AetherRAG

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  start.sh  test_api_endpoints.py  test_rag.py  verify_agent_rag.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: chat.py  documents.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/rag/: chunker.py  embeddings.py  graph.py  parser.py  retriever.py
backend/app/services/: storage.py
backend/app/worker/: celery_app.py  tasks.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: ChatMessageSkeleton.tsx  page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: DocumentUploader.tsx
