[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.22.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "tabulate>=0.10.0",
    "unstructured-client>=0.45.0",
    "uvicorn>=0.51.0",
    "boto3>=1.34.0",
    "fastembed>=0.2.0",
    "pypdf>=4.0.0",
]
